@@ -108,6 +108,10 @@ do
 		dolvm)
 			USE_LVM_NORMAL=1
 		;;
+		dolvm2)
+			bad_msg 'Using dolvm2 is deprecated, use dolvm, instead.'
+			USE_LVM_NORMAL=1
+		;;
 		domdadm)
 			USE_MDADM=1
 		;;
@@ -119,6 +123,10 @@ do
 			USE_DMRAID_NORMAL=1
 		;;
 		doevms)
+			USE_EVMS_NORMAL=1
+		;;
+		doevms2)
+			bad_msg 'Using doevms2 is deprecated, use doevms, instead.'
 			USE_EVMS_NORMAL=1
 		;;
 		# Debug Options
